parser/tests/bad/sub02-1.st
% 'function' must ends with a 'result' statement
%   has result but end with statement

function f(var i: int) : int
  result i
  i := 1
end f
